# blockchain_analyzer

./: .dockerignore  .env.sample  .gitignore  .gitmodules  Cargo.toml  Dockerfile.blockchain_analyzer  Dockerfile.db_importer  README.md  deploy_blockchain_analyzer.sh  deploy_db_importer.sh  docker-compose.tests.yml  rustfmt.toml  set_up_test_environment.sh
address_map/: Cargo.toml
address_map/src/: address_map.rs  lib.rs  lru_cached_address_map.rs  postgres_address_map.rs  redis_address_map.rs  redis_id_map.rs
address_map/tests/: redis_address_map_test.rs
bir/: Cargo.toml
bir_construction/: Cargo.toml
bir_construction/src/: bir_construction.rs  input_address_resolver.rs  lib.rs  ordered_blocks.rs  state.rs
bir_construction/src/address_map/: mod.rs
blk_file_reader/: Cargo.toml
blk_file_reader/src/: block_read.rs  block_reader.rs  blocks.rs  domain.rs  lib.rs  main.rs  primitives.rs  read.rs  util.rs
blk_file_reader/src/domain/: address.rs  block.rs  hash.rs  input.rs  mod.rs  output.rs  script_witness.rs  transaction.rs  witness.rs
blk_file_reader/tests/: block_reader_test.rs  genesis_test.rs  read_blk_files_test.rs  seg_wit_test.rs  skip_test.rs
blockchain_analyzer/: Cargo.toml
blockchain_analyzer/migrations/2018-02-18-184850_create_transactions/: up.sql
blockchain_analyzer/migrations/2018-02-18-184909_create_output_addresses/: down.sql
blockchain_analyzer/migrations/2018-04-22-113404_create_blocks_hash_index/: down.sql
blockchain_analyzer/migrations/2018-04-22-113725_create_blocks_previous_block_hash_index/: up.sql
blockchain_analyzer/migrations/2018-04-22-171621_create_blocks_height_index/: down.sql
blockchain_analyzer/migrations/2018-04-22-200410_create_transactions_block_id_index/: down.sql  up.sql
blockchain_analyzer/migrations/2018-05-21-133635_create_addresses/: up.sql
blockchain_analyzer/migrations/2018-05-27-121609_create_address_deduplicator_states/: down.sql
blockchain_analyzer/migrations/2018-06-09-113015_create_script_witness_items/: down.sql
blockchain_analyzer/migrations/2018-12-09-110936_create_address_tags/: down.sql
blockchain_analyzer/migrations/2018-12-09-113042_create_address_tags_address_id_index/: up.sql
blockchain_analyzer/migrations/2018-12-09-135728_create_resolved_inputs/: up.sql
blockchain_analyzer/migrations/2018-12-09-140554_create_resolved_receivers/: up.sql
blockchain_analyzer/migrations/2019-02-18-185137_create_address_tags_title_index/: down.sql  up.sql
blockchain_analyzer/migrations/2019-02-18-190813_create_enum_address_tag_category/: down.sql  up.sql
blockchain_analyzer/migrations/2019-02-18-191003_alter_address_tags_add_category_column/: down.sql  up.sql
blockchain_analyzer/src/: config.rs  index.rs  lib.rs
blockchain_analyzer/src/bir/: address.rs  bir_file_iterator.rs  block.rs  input.rs  mod.rs  output.rs  transaction.rs  util.rs
blockchain_analyzer/src/db/: address.rs  blk_file.rs  cluster_assignment.rs  mod.rs  new_blk_file.rs  new_block.rs  new_output_address.rs  new_script_witness_item.rs  new_transaction.rs  output.rs
blockchain_analyzer/src/task_manager/: index.rs  mod.rs  task.rs  task_manager.rs
blockchain_analyzer/src/tasks/: address_deduplication_task.rs  blk_file_import_task.rs  block_height_calculation_task.rs  mod.rs
clustering/: Cargo.toml
clustering/src/: cluster_representatives.rs  cluster_unifier.rs  lib.rs
clustering/src/heuristics/: heuristic.rs  input_cluster_heuristic.rs  mod.rs  otc_heuristic.rs
database_importer/: .env  Cargo.toml
database_importer/migrations/2018-02-18-184844_create_blocks/: up.sql
database_importer/migrations/2018-02-18-184850_create_transactions/: up.sql
database_importer/migrations/2018-02-18-184901_create_inputs/: down.sql  up.sql
database_importer/migrations/2018-02-18-184904_create_outputs/: down.sql  up.sql
database_importer/migrations/2018-02-18-184909_create_addresses/: up.sql
database_importer/src/: blkfileimporter.rs  lib.rs  schema.rs
database_importer/src/domain/: address.rs  block.rs  input.rs  mod.rs  newaddress.rs  newblock.rs  newinput.rs  newoutput.rs  newtransaction.rs  output.rs  transaction.rs
database_importer/src/repository/: addressrepository.rs  blockrepository.rs  inputrepository.rs  mod.rs  outputrepository.rs  repository.rs  transactionrepository.rs
db_importer/: Cargo.toml
db_importer/src/: address_deduplication_task.rs  address_deduplicator.rs  bir_file_writer_task.rs  blk_file_import_task.rs  blk_file_importer.rs  blkfileimporter.rs  block_height_calculation_task.rs  block_height_calculator.rs  clustering_task.rs  config.rs  db_importer.rs  lib.rs  task.rs
db_importer/src/bir/: mod.rs
db_importer/src/domain/: mod.rs  newtransaction.rs  transaction.rs
db_importer/src/tasks/: address_deduplication_task.rs
db_importer/tests/: blk_file_importer_test.rs
db_persistence/: Cargo.toml  build.rs
db_persistence/migrations/2018-02-18-184844_create_blocks/: up.sql
db_persistence/migrations/2018-02-18-184850_create_transactions/: up.sql
db_persistence/migrations/2018-02-18-184901_create_inputs/: up.sql
db_persistence/migrations/2018-02-18-184904_create_outputs/: up.sql
db_persistence/migrations/2018-02-18-184909_create_addresses/: down.sql  up.sql
db_persistence/migrations/2018-02-18-184909_create_output_addresses/: up.sql
db_persistence/migrations/2018-03-18-191548_create_blk_files/: down.sql  up.sql
db_persistence/migrations/2018-04-22-113404_create_blocks_hash_index/: up.sql
db_persistence/migrations/2018-04-22-113725_create_blocks_previous_block_hash_index/: down.sql
db_persistence/migrations/2018-04-22-171621_create_blocks_height_index/: up.sql
db_persistence/migrations/2018-04-22-200906_create_inputs_transaction_id_index/: down.sql  up.sql
db_persistence/migrations/2018-04-23-181421_create_outputs_transaction_id_index/: down.sql  up.sql
db_persistence/src/: blk_file.rs  block.rs  cluster_assignment.rs  lib.rs  new_block.rs  new_input.rs  new_output.rs  schema.rs  transaction.rs
db_persistence/tests/: blk_file_repository_test.rs  block_repository_test.rs
(+156 files in other folders)
