[package]
name = "address_map"
version = "0.1.0"
authors = ["Matthias Reisinger <matthias.j.reisinger@gmail.com>"]

[dependencies]
redis = "0.8.0"
lru-cache = "0.1.1"
db_persistence = { path = "../db_persistence" }
diesel = { version = "1.2.0", features = ["postgres"] }

[dev-dependencies]
redis_test = { path = "../redis_test" }
