[package]
name = "blockchain_analyzer"
version = "0.1.0"
authors = ["Matthias Reisinger <matthias.j.reisinger@gmail.com>"]

[dev-dependencies]
data-encoding = "2.1.1"

[dependencies]
bincode = "^1.0.0"
bit-vec = "0.5.0"
blk_file_reader = { path = "../blk_file_reader" }
clap = "^2.29.1"
db_persistence = { path = "../db_persistence" }
diesel = { version = "1.3.3", features = ["postgres"] }
dotenv = "0.11.0"
failure = "0.1.1"
log = "^0.4"
lru-cache = "0.1.1"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
rayon = "^1.0.0"
serde = "^1.0"
serde_derive = "^1.0"
simplelog = "^0.4.4"
union-find = "0.3.2"
