[package]
name = "database_importer"
version = "0.1.0"
authors = ["Matthias Reisinger <matthias.j.reisinger@gmail.com>"]

[dependencies]
clap = "^2.29.1"
log = "^0.4"
simplelog = "^0.4.4"
blk_file_reader = { path = "../blk_file_reader" }
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
rayon = "^1.0.0"
