[package]
name = "db_importer"
version = "0.1.0"
authors = ["Matthias Reisinger <matthias.j.reisinger@gmail.com>"]

[dev-dependencies]
data-encoding = "2.1.1"

[dependencies]
blk_file_reader = { path = "../blk_file_reader" }
db_persistence = { path = "../db_persistence" }
config = { path = "../config" }
bir_construction = { path = "../bir_construction" }
bir = { path = "../bir" }
clustering = { path = "../clustering" }
clap = "^2.29.1"
log = "^0.4"
simplelog = "^0.4.4"
diesel = { version = "1.3.0", features = ["postgres"] }
rayon = "^1.0.0"
bincode = "^1.0.0"
