[package]
name = "db_persistence"
version = "0.1.0"
authors = ["Matthias Reisinger <matthias.j.reisinger@gmail.com>"]

[dependencies]
blk_file_reader = { path = "../blk_file_reader" }
diesel = { version = "1.3.0", features = ["postgres"] }

[dev-dependencies]
data-encoding = "2.1.1"

[build-dependencies]
dotenv = "0.11.0"
diesel = { version = "1.3.0", features = ["postgres"] }
diesel_migrations = { version = "1.3.0", features = ["postgres"] }
